# DiscordBot

./: CMakeLists.txt
src/: main.cxx
